iac/kubernetes/ask-net/gateway-temporal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: askorium-gateway-temporal
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: istio
  addresses:
    - type: Hostname
      value: istio-ingressgateway.istio-system.svc.cluster.local
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "temporal.askorium.ru"
      tls:
        certificateRefs:
          - name: temporal-askorium-ru-tls
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: All
