iac/kubernetes/ask-net/dest-rule-temporal.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ask-temporal-frontend-h2
  namespace: askorium
spec:
  host: ask-temporal-frontend.askorium.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
