iac/kubernetes/ask-net/httproute-core.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ask-core-route
  namespace: askorium
spec:
  parentRefs:
    - name: askorium-gateway
      namespace: istio-system
  rules:
    - matches:
      - path:
            type: PathPrefix
            value: /ask
      backendRefs:
        - name: ask-core
          port: 80
