iac/kubernetes/ask-net/httproute-temporal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ask-temporal-route
  namespace: askorium
spec:
  parentRefs:
    - name: askorium-gateway-temporal
      namespace: istio-system
  rules:
    - matches:
      - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ask-temporal-frontend
          port: 7233
